# BPOTF

./: .gitignore  BPOTF.py  BPOTF2.py  BPOTFog.py  CMakeLists.txt  LICENSE  Makefile  README.md  algorithm.py  algorithm_rustwork.py  debug.py  pruebas.ipynb  pyproject.toml  setup.py  test.ipynb  testBBCLNmap144_12_12_12rounds_p_001.mat  transferMatrixTon.mat
.github/ISSUE_TEMPLATE/: bug-report---.md
cln_noise/: BBcode_cln.py
cln_noise/decoders/: UFCLN.py  preprocessing.py
data_noise/: BBcodesim.py  Kruskal copy.py  Kruskal.py  UF.py  UFCLN.py  algorithm.py  algorithm2.py  algorithm_rustwork.py  bfs.py  error.py  pruebas.ipynb  roffe.py  surface_code_cln.py  surface_code_cln_beta.py
data_noise/pcms/: BBcode.py
reference/: UF.py  algorithm2.py  devel.py
src/: py11_iface.cpp
src/BPOTF/: OBPOTF.cpp  OBPOTF.h
src/CSC/: OCSC.cpp  OCSC.h  csc_pytest.py  main_test.cpp
src/DisjointSet/: DisjointSet.cpp  DisjointSet.h
src/ldpc_v2_src/: rng.hpp
transfermatrices/: transferMatrixcodel6m6.mat  transferMatrixcodel9m6.mat
